# shima-archives

./: .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  channel.py  chat_message.py  streamer.py  vod.py
backend/app/routers/: __init__.py  auth.py  bot.py  channels.py  ingest.py  query.py  vods.py
backend/app/schemas/: __init__.py  channel.py  chat.py  clip.py  query.py  vod.py
backend/app/services/: twitch.py
backend/tests/: test_channel.py  test_config.py  test_health.py  test_twitch_client.py
